--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
   <title>HTML Images</title>
 </head>
 <body>
-
   <!-- Your code here -->
+  <a href="https://en.wikipedia.org/wiki/Chelsea_F.C.#/media/File:Chelsea_FC.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/Chelsea_FC.svg/1200px-Chelsea_FC.svg.png">
+  </a>
+
+  <a href="https://en.wikipedia.org/wiki/Chelsea_F.C.#/media/File:Chelsea_FC.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/Chelsea_FC.svg/1200px-Chelsea_FC.svg.png" alt="Chelsea F.C. logo">
+  </a>
+  
+  <a href="https://en.wikipedia.org/wiki/Chelsea_F.C.#/media/File:Chelsea_FC.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/Chelsea_FC.svg/1200px-Chelsea_FC.svg.png" alt="Chelsea F.C. logo" title="Go Blues!">
+  </a>
+
+  
+  
 
 </body>
 </html>
